removed behavior of disable links menu item

--- a/static/index.html
+++ b/static/index.html
@@ -956,6 +956,9 @@
                 } catch (e) {
                     console.error(e);
                 }
+                $(".disabled-link").click(function(event) {
+                    event.preventDefault();
+                });
             }
         </script>
     </head>
