fixed presentation ; added preview theme support

--- a/static/index.html
+++ b/static/index.html
@@ -78,8 +78,6 @@
                             <li class="dropdown-submenu">
                             <a id="prev_theme" href="#" tabindex="-1" role="menuitem">Preview theme</a>
                             <ul id="dd-prev-theme" class="dropdown-menu" aria-labelledby="prev_theme" role="menu">
-                                <li role="presentation"> <a id="preview-classic" href="#" tabindex="-1" role="menuitem">Default</a> </li>
-                                <li role="presentation"> <a id="preview-raw" href="#" tabindex="-1" role="menuitem">Raw</a> </li>
                             </ul>
                             </li>
                         </ul>
@@ -113,16 +111,12 @@
         <section id='editor'></section>
         <!-- preview/wysiwyg/cli place holder -->
         <section id='preview'></section>
-        <!-- <footer class="navbar navbar-inverse navbar-fixed-bottom"> -->
-        <!--     <div class="navbar-inner"> -->
-        <!--         <div class="container"> -->
-        <!--             <p class="navbar-text"> -->
-        <!--                 <small> -->
-        <!--                     Yet Another Collaborative Editor by <a href="http://b.pratz.net">Bernard `Guyzmo` Pratz</a>, 2013, under the <a href="">AGPLv3</a>. -->
-        <!--                 </small> -->
-        <!--             </p> -->
-        <!--         </div> -->
-        <!--     </div> -->
-        <!-- </footer> -->
+        <footer>
+            <p class="navbar-text">
+                <small>
+                    Yet Another Collaborative Editor by <a href="http://b.pratz.net">Bernard `Guyzmo` Pratz</a>, 2013, under the <a href="">AGPLv3</a>.
+                </small>
+            </p>
+        </footer>
     </body>
 </html>
