--- a/static/index.html
+++ b/static/index.html
@@ -3,24 +3,27 @@
     <head>
         <title>Yet another collaborative editor</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="jquery-2.0.0.js"></script>            <!-- load JQuery -->
-        <script src="jquery-ui.min.js"></script>           <!-- load JQuery UI -->
-        <script src="jquery.cookie.js"></script>           <!-- load JQuery Cookies -->
-        <script src="bootstrap/js/bootstrap.js"></script>  <!-- bootstrap UI -->
-        <script src="rloader1.5.4_fin.js"></script>        <!-- Dynamic resources loader -->
-        <script src="ace/ace.js"></script>                 <!-- ACE Editor -->
-        <script src="bcsocket.js"></script>                <!-- add transport -->
-        <script src="webclient/share.js"></script>         <!-- ShareJS -->
-        <script src="webclient/ace.js"></script>           <!-- helper to attach textarea to ShareJS server -->
+        <script src="/jquery-2.0.0.js"></script>            <!-- load JQuery -->
+        <script src="/jquery-ui.min.js"></script>           <!-- load JQuery UI -->
+        <script src="/jquery.cookie.js"></script>           <!-- load JQuery Cookies -->
+        <script src="/bootstrap/js/bootstrap.js"></script>  <!-- bootstrap UI -->
+        <script src="/rloader1.5.4_fin.js"></script>        <!-- Dynamic resources loader -->
+        <script src="/ace/ace.js"></script>                 <!-- ACE Editor -->
+        <script src="/bcsocket.js"></script>                <!-- add transport -->
+        <script src="/webclient/share.js"></script>         <!-- ShareJS -->
+        <script src="/webclient/ace.js"></script>           <!-- helper to attach textarea to ShareJS server -->
         <script id="jsrepl-script"></script>               <!-- placeholder for jsrepl -->
+        
+		<script type="text/javascript" src="/jspdf.js"></script>
+
         <link href="/font-awesome/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-         <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css" rel="stylesheet">
+        <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css" rel="stylesheet">
         <link href="/yace.css" rel="stylesheet" />
         <script src="/yace.js"> </script>
         <script> window.onload = window.YACE; </script>
     </head>
     <body>
-        <header class="navbar navbar-inverse navbar-fixed-top">
+        <header id="header" class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
                     <a class="brand" href="#" title="Yet Another Collaborative Editor">YACE</a>
@@ -111,7 +114,7 @@
         <section id='editor'></section>
         <!-- preview/wysiwyg/cli place holder -->
         <section id='preview'></section>
-        <footer>
+        <footer id="footer">
             <p class="navbar-text">
                 <small>
                     Yet Another Collaborative Editor by <a href="http://b.pratz.net">Bernard `Guyzmo` Pratz</a>, 2013, under the <a href="">AGPLv3</a>.
