updated uri of bootstrap css

--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,7 @@
 		<script type="text/javascript" src="/jspdf.js"></script>
 
         <link href="/font-awesome/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-        <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css" rel="stylesheet">
+        <link href="/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
         <link href="/yace.css" rel="stylesheet" />
         <script src="/yace.js"> </script>
         <script> window.onload = window.YACE; </script>
