added support for raw and html export ; added base code for gist export

--- a/static/index.html
+++ b/static/index.html
@@ -41,7 +41,8 @@
                                 <li role="presentation"> <a id="gist" href="#" tabindex="-1" role="menuitem"> Export to Gist </a> </li>
                                 <li role="presentation"> <a id="wiki" href="#" tabindex="-1" role="menuitem"> Export to wiki </a> </li>
                                 <li class="divider" role="presentation"></li>
-                                <li role="presentation"> <a id="download" href="#" tabindex="-1" role="menuitem">Download as raw </a> </li>
+                                <li role="presentation"> <a id="raw" href="#" tabindex="-1" role="menuitem">Download as raw </a> </li>
+                                <li role="presentation"> <a id="html" href="#" tabindex="-1" role="menuitem">Download as html </a> </li>
                                 <li role="presentation"> <a id="pdf" href="#" tabindex="-1" role="menuitem"> Download as pdf </a> </li>
                                 <li role="presentation"> <a id="odt" href="#" tabindex="-1" role="menuitem"> Download as odt </a> </li>
                             </ul>
